testsuite/tests/typecheck/should_fail/T7892.hs
{-# LANGUAGE TypeFamilies #-}
module T7892 where

class C (f :: * -> *) where
   type F (f :: *) :: *


