testsuite/tests/typecheck/should_fail/T7892.stderr

T7892.hs:5:4: error:
    • Expected kind ‘* -> *’, but ‘f’ has kind ‘*’
    • In the associated type family declaration for ‘F’
